# rust-backend-axum

./: .env.example  Axum Rust Backend Auth.postman_collection.json  Cargo.toml  LICENSE  README.md  postman_collection.json
migrations/: 20240902034746_users.down.sql  20240902034746_users.up.sql
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs  routes.rs
src/handler/: auth.rs  users.rs
src/mail/: mails.rs  mod.rs  sendmail.rs
src/mail/templates/: RestPassword-email.html  Verification-email.html  Welcome-email.html
src/utils/: mod.rs  password.rs  token.rs
